[project]
name = "predicteclipse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "numpy>=2.3.1",
    "requests>=2.32.4",
    "skyfield>=1.53",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
